fix horizontal scrolling on home page

--- a/listnride/app/assets/stylesheets/app.css
+++ b/listnride/app/assets/stylesheets/app.css
@@ -678,8 +678,8 @@ home #landingSection {
 
 .lnr-badge-container {
   z-index: 3;
-  height: 100%;
-  width: 100%;
+  height: 90%;
+  width: 90%;
   position: absolute;
   top: 10%;
   left: 6%;
@@ -698,6 +698,7 @@ home #landingSection {
 @media (max-width:599px) {
   .lnr-badge-container {
     top: 5%;
+    z-index: 10;
   }
   .lnr-badge {
     width: 100px;
